--- a/overview-mar.html
+++ b/overview-mar.html
@@ -1236,13 +1236,6 @@
             <div class="col-sm-12">
               <div class="about">
                 <h1 class="stay-connected">Stay Connected</h1>
-                <p>
-                  Bootstrap Footer example snippets with CSS, Javascript and
-                  HTML. Code example of bootstrap-3 footer using HTML,
-                  Javascript, jQuery, and CSS. 5 Beautiful and Responsive Footer
-                  Templates. Pin a fixed-height footer to the bottom of the
-                  viewport in desktop browsers with this custom HTML and CSS.
-                </p>
 
                 <div class="social-media">
                   <ul class="list-inline">
@@ -1271,108 +1264,292 @@
               </div>
             </div>
 
-            <div class="col-md-3 col-sm-6">
+            <div class="col-md">
               <div class="footer-info-single">
-                <h2 class="title">Help Center</h2>
+                <h2 class="title">SOLAR SYSTEM</h2>
                 <ul class="list-unstyled">
                   <li>
                     <a href="#footer" title=""
-                      ><i class="fa fa-angle-double-right"></i> How to Pay</a
+                      ><i class="fa fa-angle-double-right"></i> Our Solar
+                      System</a
                     >
                   </li>
                   <li>
                     <a href="#footer" title=""
-                      ><i class="fa fa-angle-double-right"></i> FAQ's</a
+                      ><i class="fa fa-angle-double-right"></i> Sun</a
                     >
                   </li>
                   <li>
                     <a href="#footer" title=""
-                      ><i class="fa fa-angle-double-right"></i> Sitemap</a
+                      ><i class="fa fa-angle-double-right"></i> Kuiper Belt</a
                     >
                   </li>
                   <li>
                     <a href="#footer" title=""
-                      ><i class="fa fa-angle-double-right"></i> Delivery Info</a
+                      ><i class="fa fa-angle-double-right"></i> Oort Cloud</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#footer" title=""
+                      ><i class="fa fa-angle-double-right"></i> Beyond Our Solar
+                      System</a
                     >
                   </li>
                 </ul>
               </div>
             </div>
 
-            <div class="col-md-3 col-sm-6">
+            <div class="col-md">
               <div class="footer-info-single">
-                <h2 class="title">Customer information</h2>
+                <h2 class="title">PLANETS</h2>
                 <ul class="list-unstyled">
                   <li>
                     <a href="#footer" title=""
-                      ><i class="fa fa-angle-double-right"></i> About Us</a
+                      ><i class="fa fa-angle-double-right"></i> About Planets</a
+                    >
+                  </li>
+                </ul>
+                <h2 class="title" style="opacity: 0.8">PLANETS</h2>
+                <ul class="list-unstyled">
+                  <li>
+                    <a href="#footer" title=""
+                      ><i class="fa fa-angle-double-right"></i> Mercury</a
                     >
                   </li>
                   <li>
                     <a href="#footer" title=""
-                      ><i class="fa fa-angle-double-right"></i> FAQ's</a
+                      ><i class="fa fa-angle-double-right"></i> Venus</a
                     >
                   </li>
                   <li>
                     <a href="#footer" title=""
-                      ><i class="fa fa-angle-double-right"></i> Sell Your
-                      Items</a
+                      ><i class="fa fa-angle-double-right"></i> Earth</a
                     >
                   </li>
                   <li>
                     <a href="#footer" title=""
-                      ><i class="fa fa-angle-double-right"></i> Contact Us</a
+                      ><i class="fa fa-angle-double-right"></i> Mars</a
                     >
                   </li>
                   <li>
                     <a href="#footer" title=""
-                      ><i class="fa fa-angle-double-right"></i> RSS</a
+                      ><i class="fa fa-angle-double-right"></i> Jupiter</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#footer" title=""
+                      ><i class="fa fa-angle-double-right"></i> Saturn</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#footer" title=""
+                      ><i class="fa fa-angle-double-right"></i> Uranus</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#footer" title=""
+                      ><i class="fa fa-angle-double-right"></i> Neptune</a
+                    >
+                  </li>
+                </ul>
+                <h2 class="title">DWARF PLANETS</h2>
+                <ul class="list-unstyled">
+                  <li>
+                    <a href="#footer" title=""
+                      ><i class="fa fa-angle-double-right"></i> Pluto</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#footer" title=""
+                      ><i class="fa fa-angle-double-right"></i> Ceres</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#footer" title=""
+                      ><i class="fa fa-angle-double-right"></i> Makemake</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#footer" title=""
+                      ><i class="fa fa-angle-double-right"></i> Haumea</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#footer" title=""
+                      ><i class="fa fa-angle-double-right"></i> Eris</a
+                    >
+                  </li>
+                </ul>
+                <h2 class="title">HYPOTHETICAL</h2>
+                <ul class="list-unstyled">
+                  <li>
+                    <a href="#footer" title=""
+                      ><i class="fa fa-angle-double-right"></i> Planet X</a
                     >
                   </li>
                 </ul>
               </div>
             </div>
 
-            <div class="col-md-3 col-sm-6">
+            <div class="col-md">
               <div class="footer-info-single">
-                <h2 class="title">Security & privacy</h2>
+                <h2 class="title">MOONS</h2>
                 <ul class="list-unstyled">
                   <li>
                     <a href="#footer" title=""
-                      ><i class="fa fa-angle-double-right"></i> Terms Of Use</a
+                      ><i class="fa fa-angle-double-right"></i> About Moons</a
+                    >
+                  </li>
+                </ul>
+                <h2 class="title" style="opacity: 0.8">BY DESTINATION</h2>
+                <ul class="list-unstyled">
+                  <li>
+                    <a href="#footer" title=""
+                      ><i class="fa fa-angle-double-right"></i> Earth (1)</a
                     >
                   </li>
                   <li>
                     <a href="#footer" title=""
-                      ><i class="fa fa-angle-double-right"></i> Privacy
-                      Policy</a
+                      ><i class="fa fa-angle-double-right"></i> Mars (2)</a
                     >
                   </li>
                   <li>
                     <a href="#footer" title=""
-                      ><i class="fa fa-angle-double-right"></i> Return / Refund
-                      Policy</a
+                      ><i class="fa fa-angle-double-right"></i> Jupiter (79)</a
                     >
                   </li>
                   <li>
                     <a href="#footer" title=""
-                      ><i class="fa fa-angle-double-right"></i> Store
-                      Locations</a
+                      ><i class="fa fa-angle-double-right"></i> Saturn (82)</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#footer" title=""
+                      ><i class="fa fa-angle-double-right"></i> Uranus (27)</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#footer" title=""
+                      ><i class="fa fa-angle-double-right"></i> Neptune (14)</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#footer" title=""
+                      ><i class="fa fa-angle-double-right"></i> Pluto (5)</a
                     >
                   </li>
                 </ul>
               </div>
             </div>
 
-            <div class="col-md-3 col-sm-6">
+            <div class="col-md">
               <div class="footer-info-single">
-                <h2 class="title">Payment</h2>
-                <p>
-                  Sample HTML page with Twitter's Bootstrap. Code example of
-                  Easy Sticky Footer using HTML, Javascript, jQuery, and CSS.
-                  This bootstrap tutorial covers all the major elements of
-                  responsive
-                </p>
+                <h2 class="title">ASTEROIDS, COMETS & METEORS</h2>
+                <ul class="list-unstyled">
+                  <li>
+                    <a href="#footer" title=""
+                      ><i class="fa fa-angle-double-right"></i> About Asteroids,
+                      Comets & Meteors</a
+                    >
+                  </li>
+                </ul>
+                <h2 class="title" style="opacity: 0.8">BY TYPE</h2>
+                <ul class="list-unstyled">
+                  <li>
+                    <a href="#footer" title=""
+                      ><i class="fa fa-angle-double-right"></i> Meteors &
+                      Meteorites</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#footer" title=""
+                      ><i class="fa fa-angle-double-right"></i> Asteroids</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#footer" title=""
+                      ><i class="fa fa-angle-double-right"></i> Comets</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="col-md">
+              <div class="footer-info-single">
+                <h2 class="title">MORE</h2>
+                <ul class="list-unstyled">
+                  <li>
+                    <a href="#footer" title=""
+                      ><i class="fa fa-angle-double-right"></i> News</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#footer" title=""
+                      ><i class="fa fa-angle-double-right"></i> What's Up:
+                      Skywatching Tips from NASA</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#footer" title=""
+                      ><i class="fa fa-angle-double-right"></i> Resources</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#footer" title=""
+                      ><i class="fa fa-angle-double-right"></i> Raw Images</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#footer" title=""
+                      ><i class="fa fa-angle-double-right"></i> People</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#footer" title=""
+                      ><i class="fa fa-angle-double-right"></i> Missions</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#footer" title=""
+                      ><i class="fa fa-angle-double-right"></i> Science Goals</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#footer" title=""
+                      ><i class="fa fa-angle-double-right"></i> Technology
+                      Reports</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#footer" title=""
+                      ><i class="fa fa-angle-double-right"></i> Kids</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#footer" title=""
+                      ><i class="fa fa-angle-double-right"></i> Interactives</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#footer" title=""
+                      ><i class="fa fa-angle-double-right"></i> Basics of Space
+                      Flight</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#footer" title=""
+                      ><i class="fa fa-angle-double-right"></i> Solar System
+                      Ambassadors</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#footer" title=""
+                      ><i class="fa fa-angle-double-right"></i> Resource
+                      Packages</a
+                    >
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
