--- a/index.html
+++ b/index.html
@@ -191,132 +191,89 @@
           <div class="carousel-inner container">
             <div class="carousel-item active">
               <div class="col-4">
-                <a href="#1">
+                <a href="#Jupiter">
                   <img
                     class="img-fluid"
                     src="https://solarsystem.nasa.gov/system/feature_items/images/16_jupiter_new.png"
                     alt=""
                   />
-                  <p class="text-center text-white">1</p>
+                  <p class="text-center text-white">Jupiter</p>
                 </a>
               </div>
               <div class="col-4">
-                <a href="#1">
+                <a href="#Earth">
                   <img
                     class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/feature_items/images/16_jupiter_new.png"
+                    src="https://solarsystem.nasa.gov/system/feature_items/images/17_earth.png"
                     alt=""
                   />
-                  <p class="text-center text-white">1</p>
+                  <p class="text-center text-white">Earth</p>
                 </a>
               </div>
               <div class="col-4">
-                <a href="#1">
+                <a href="#Mercury">
                   <img
                     class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/feature_items/images/16_jupiter_new.png"
+                    src="https://solarsystem.nasa.gov/system/feature_items/images/18_mercury_new.png"
                     alt=""
                   />
-                  <p class="text-center text-white">1</p>
-                </a>
-              </div>
-            </div>
-
-            <div class="carousel-item">
-              <div class="col-4">
-                <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/feature_items/images/16_jupiter_new.png"
-                    alt=""
-                  />
-                  <p class="text-center text-white">1</p>
-                </a>
-              </div>
-              <div class="col-4">
-                <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/feature_items/images/16_jupiter_new.png"
-                    alt=""
-                  />
-                  <p class="text-center text-white">1</p>
-                </a>
-              </div>
-              <div class="col-4">
-                <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/feature_items/images/16_jupiter_new.png"
-                    alt=""
-                  />
-                  <p class="text-center text-white">1</p>
+                  <p class="text-center text-white">Mercury</p>
                 </a>
               </div>
             </div>
 
             <div class="carousel-item">
               <div class="col-4">
-                <a href="#1">
+                <a href="#Venus">
                   <img
                     class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/feature_items/images/16_jupiter_new.png"
+                    src="https://solarsystem.nasa.gov/system/feature_items/images/27_venus_jg.png"
                     alt=""
                   />
-                  <p class="text-center text-white">1</p>
+                  <p class="text-center text-white">Venus</p>
                 </a>
               </div>
               <div class="col-4">
-                <a href="#1">
+                <a href="#Saturn">
                   <img
                     class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/feature_items/images/16_jupiter_new.png"
+                    src="https://solarsystem.nasa.gov/system/feature_items/images/28_saturn.png"
                     alt=""
                   />
-                  <p class="text-center text-white">1</p>
+                  <p class="text-center text-white">Saturn</p>
                 </a>
               </div>
               <div class="col-4">
-                <a href="#1">
+                <a href="#Uranus">
                   <img
                     class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/feature_items/images/16_jupiter_new.png"
+                    src="https://solarsystem.nasa.gov/system/feature_items/images/29_uranus.png"
                     alt=""
                   />
-                  <p class="text-center text-white">1</p>
+                  <p class="text-center text-white">Uranus</p>
                 </a>
               </div>
             </div>
 
             <div class="carousel-item">
               <div class="col-4">
-                <a href="#1">
+                <a href="#Neptune">
                   <img
                     class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/feature_items/images/16_jupiter_new.png"
+                    src="https://solarsystem.nasa.gov/system/feature_items/images/30_neptune.png"
                     alt=""
                   />
-                  <p class="text-center text-white">1</p>
+                  <p class="text-center text-white">Neptune</p>
                 </a>
               </div>
               <div class="col-4">
-                <a href="#1">
+                <a href="#Earth's Moon">
                   <img
                     class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/feature_items/images/16_jupiter_new.png"
+                    src="https://solarsystem.nasa.gov/system/feature_items/images/31_earth_moon.png"
                     alt=""
                   />
-                  <p class="text-center text-white">1</p>
-                </a>
-              </div>
-              <div class="col-4">
-                <a href="#1">
-                  <img
-                    class="img-fluid"
-                    src="https://solarsystem.nasa.gov/system/feature_items/images/16_jupiter_new.png"
-                    alt=""
-                  />
-                  <p class="text-center text-white">1</p>
+                  <p class="text-center text-white">Earth's Moon</p>
                 </a>
               </div>
             </div>
