--- a/planets/detail-venus.html
+++ b/planets/detail-venus.html
@@ -377,7 +377,7 @@
               <div class="container">
                 <h2>10 Need-to-Know Things About Venus</h2>
                 <div class="row">
-                  <div class="col-sm-4 i1">
+                  <div class="col-xl-4 i1">
                     <div class="number-count">
                       <p>1</p>
                     </div>
@@ -387,7 +387,7 @@
                       and Venus would each be about the size of a nickel.
                     </p>
                   </div>
-                  <div class="col-sm-4 i2">
+                  <div class="col-xl-4 i2">
                     <div class="number-count">
                       <p>2</p>
                     </div>
@@ -398,7 +398,7 @@
                       (108 million km).
                     </p>
                   </div>
-                  <div class="col-sm-4 i3">
+                  <div class="col-xl-4 i3">
                     <div class="number-count">
                       <p>3</p>
                     </div>
@@ -411,14 +411,14 @@
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-sm-4 i4 img-grid">
+                  <div class="col-xl-4 i4 img-fluid">
                     <img
                       src="https://solarsystem.nasa.gov/system/basic_html_elements/11711_ten_things_venus_2.jpg"
                       class="img-fluid"
                       alt="Responsive image"
                     />
                   </div>
-                  <div class="col-sm-4 i5">
+                  <div class="col-xl-4 i5">
                     <div class="number-count">
                       <p>4</p>
                     </div>
@@ -429,7 +429,7 @@
                       vast ridged plateaus.
                     </p>
                   </div>
-                  <div class="col-sm-4 i6">
+                  <div class="col-xl-4 i6">
                     <div class="number-count">
                       <p>5</p>
                     </div>
@@ -438,7 +438,7 @@
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-sm-4 i7">
+                  <div class="col-xl-4 i7">
                     <div class="number-count">
                       <p>6</p>
                     </div>
@@ -448,7 +448,7 @@
                       Fahrenheit (465 degrees Celsius)—hot enough to melt lead.
                     </p>
                   </div>
-                  <div class="col-sm-4 i8">
+                  <div class="col-xl-4 i8">
                     <div class="number-count">
                       <p>7</p>
                     </div>
@@ -459,7 +459,7 @@
                       ancient ocean.
                     </p>
                   </div>
-                  <div class="col-sm-4 i9">
+                  <div class="col-xl-4 i9">
                     <div class="number-count">
                       <p>8</p>
                     </div>
@@ -472,7 +472,7 @@
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-sm-4 i10">
+                  <div class="col-xl-4 i10">
                     <div class="number-count">
                       <p>9</p>
                     </div>
@@ -482,7 +482,7 @@
                       unlikely place for life as we know it.
                     </p>
                   </div>
-                  <div class="col-sm-4 i11">
+                  <div class="col-xl-4 i11">
                     <div class="number-count">
                       <p>10</p>
                     </div>
@@ -493,7 +493,7 @@
                       planet every five days.
                     </p>
                   </div>
-                  <div class="col-sm-4 i12 img-grid">
+                  <div class="col-xl-4 i12 img-fluid">
                     <img
                       src="https://solarsystem.nasa.gov/system/basic_html_elements/11710_ten_things_venus_1.jpg"
                       class="img-fluid"
