--- a/stars/detail-comet.html
+++ b/stars/detail-comet.html
@@ -383,7 +383,7 @@
                 <span class="carousel-control-next-icon"></span>
               </a>
             </div>
-            <div class="ten-thing-mar">
+            <div id="ten-thing" class="ten-thing-mars">
               <div class="container">
                 <h2>10 Need-to-Know Things About Mars</h2>
                 <div class="row">
