--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
           ><i class="fas fa-bars"></i
         ></label>
         <div class="content">
-          <div class="logo"><a href="../index.html">Astronomy</a></div>
+          <div class="logo"><a href="index.html">Astronomy</a></div>
           <ul class="links">
-            <li><a class="active-menu" href="../index.html">Homepage</a></li>
+            <li><a class="active-menu" href="index.html">Homepage</a></li>
             <li><a href="#">Overview</a></li>
             <li>
               <a href="#" class="desktop-link"
@@ -78,8 +78,8 @@
                 >Planets <i class="fa fa-caret-down"></i
               ></label>
               <ul>
-                <li><a href="../planets/detail-mars.html">Mars</a></li>
-                <li><a href="../planets/detail-venus.html">Venus</a></li>
+                <li><a href="planets/detail-mars.html">Mars</a></li>
+                <li><a href="planets/detail-venus.html">Venus</a></li>
                 <li><a href="#">Drop Menu 3</a></li>
                 <li><a href="#">Drop Menu 4</a></li>
               </ul>
@@ -93,7 +93,7 @@
                 >Stars <i class="fa fa-caret-down"></i
               ></label>
               <ul>
-                <li><a href="../stars/detail-comet.html">Comet</a></li>
+                <li><a href="stars/detail-comet.html">Comet</a></li>
                 <li><a href="#">Drop Menu 2</a></li>
                 <li><a href="#">Drop Menu 3</a></li>
 
