--- a/planets/detail-venus.html
+++ b/planets/detail-venus.html
@@ -717,6 +717,8 @@
               </p>
 
               <hr />
+            </div>
+            <div>
               <div class="row container" style="margin: auto">
                 <img
                   src="https://solarsystem.nasa.gov/system/basic_html_elements/11733_venus.png"
@@ -766,6 +768,8 @@
                   </a>
                 </div>
               </div>
+            </div>
+            <div class="content-indepth">
               <hr />
               <h3 id="Surface">Surface</h3>
               <p>
